# TI-BASIC-Plus-Plus

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
include/ti-basic-plus-plus/: macros.h
include/ti-basic-plus-plus/ast/: ast_node.h
include/ti-basic-plus-plus/basic/: diagnostics.h  diagnostics.inc  file_type.h  input_file.h  options.h  source_location.h  stringref.h
include/ti-basic-plus-plus/calculator/: builtin_constant.h  builtin_function.h  variable.h
include/ti-basic-plus-plus/lexer/: keyword.h  lexer.h  punctuator.h  token.h
include/ti-basic-plus-plus/os/: terminal.h
include/ti-basic-plus-plus/parser/: ast_node.h  operator.h  parser.h  parser_utils.h
include/ti-basic-plus-plus/utils/: emit_tree_utils.h
lib/ast/: ast_node.c  ast_node_emit.c
lib/basic/: diagnostics.c  file_type.c  input_file.c  options.c  source_location.c  stringref.c
lib/calculator/: builtin_constant.c  builtin_function.c  variable.c
lib/lexer/: keyword.c  lexer.c  lexer_internal.h  operator.c  punctuator.c  token.c  token_emit.c  tokenize_comment.c  tokenize_identifier.c  tokenize_numeric_literal.c  tokenize_punctuator.c  tokenize_string_literal.c
lib/os/: terminal.c
lib/parser/: ast_node.c  parse_calculator_variable.c  parse_condition_statement.c  parse_expression.c  parse_function_call.c  parse_function_decl.c  parse_global_decl.c  parse_if_statement.c  parse_return_statement.c  parse_statement_block.c  parse_variable_decl.c  parse_while_loop.c  parser.c  parser_internal.h  parser_utils.c
lib/utils/: emit_tree_utils.c
tools/driver/: CMakeLists.txt
tools/driver/include/driver/: options.h
tools/driver/src/: main.c  options.c
